# advent-of-code-2021-haskell

./: LICENSE  README.md
day1/: Main.hs
day10/: day10.cabal
day10/app/: Main.hs
day10/src/: Common.hs  Parse.hs  Problem.hs
day2/: Main.hs
day3/: Common.hs  Main.hs  Problem1.hs  day3.cabal
day3/Problem1/: Overengineered.hs
day3/Problem2/: Cavalieri.hs  Pwm.hs  StriderVC.hs  Topaz.hs
day4/: Common.hs  Main.hs  Problem.hs  Problem1.hs  day3.cabal
day4/Problem/: Cavalieri.hs  Chinn.hs  JHidding.hs  Topaz.hs
day5/: day5.cabal
day5/app/: Main.hs
day5/src/: Common.hs  Parse.hs  Problem.hs
day6/: day6.cabal
day6/app/: Main.hs
day6/data/: example.output
day6/src/: Common.hs  Problem.hs
day7/: day7.cabal
day7/app/: Main.hs
day7/data/: example.intermediate
day7/src/: Parse.hs  Problem.hs
day7/src/Problem/: Entertainment.hs
day8/: day8.cabal
day8/app/: Main.hs
day8/src/: Common.hs  Parse.hs  Problem.hs
day8/src/Problem/: FramedWithSilence.hs  OtherApproaches.md
day9/: day9.cabal
day9/app/: Main.hs
day9/data/: example.intermediate  example.output
day9/src/: Common.hs  Problem.hs
day9/src/Problem/: DemiAoC.hs  PWMosquito.md
