cabal-version:      2.4
name:               day4
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:
author:             André Szabolcs Szelp
maintainer:         a.sz.szelp@gmail.com

-- A copyright notice.
copyright:          (c) 2021, André Szabolcs Szelp
-- category:
-- extra-source-files: CHANGELOG.md

executable day3
    main-is:          Main.hs

    -- Modules included in this executable, other than Main.
    other-modules: Problem1
                 , Common

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:    base ^>=4.15.0.0
    hs-source-dirs:   .
    default-language: Haskell2010
